<resources>
    <string name="app_name">ShopRoute</string>
    //texts
    <string name="splash_screen_logo_text">Splash screen logo</string>
    <string name="main_menu_subtext">Sklepowy nawigator</string>
    <string name="main_menu_question">Co chciałbyś zrobić?</string>
    <string name="main_menu_create_list">Stwórz listę zakupów</string>
    <string name="main_menu_browse_shops">Sklepy</string>
    <string name="list_creator_header">Wpisz nazwę produktu lub znajdź go na liście</string>
    <string name="list_creator_text_input">Nazwa produktu</string>
    <string name="list_creator_input_default">Wpisz tutaj</string>
    <string name="preview_button_text">Podgląd listy</string>
    <string name="choose_shop_button_text">Wybierz sklep</string>
    <string name="default_text">Domyślny</string>
    <string name="shop_choice_text">Dostępne sklepy</string>
    <string name="current_item_text">Bieżący przedmiot</string>
    <string name="other_items_text">Pozostałe przedmioty</string>
    <string name="got_item_button">Mam to</string>
    <string name="postpone_item_button">Odłóż</string>
    <string name="show_route_button">Pokaż trasę</string>
    <string name="no_item">Brak produktu</string>
    <string name="add_item_description">Add item ImageButton</string>
    <string name="dialog_title">Zakupy zakończone</string>
    <string name="dialog_positive">Przejdź do menu</string>
    <string name="saved_lists_text">Zapisane listy</string>
    <string name="reuse_list">Użyj ponownie</string>
    <string name="preferences">SavedLists</string>
    <string name="save_list_question">Zapisać listę?</string>
    <string name="delete_saved">Usuń listę</string>
    <string name="choose_save_list">Wybierz listę</string>
    <string name="saved_list_index">SavedListIndex</string>
    <string name="no_items_picked">Nie wybrano produktów</string>
    <string name="back">Powrót</string>
</resources>
