<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="app.gimbus.shoproute.MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/primary_text_color"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_subtitle"
        android:text="@string/main_menu_subtext"
        android:textSize="28sp"
        android:textColor="@color/primary_text_color"
        android:layout_below="@id/app_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu_question"
        android:paddingTop="20dp"
        android:text="@string/main_menu_question"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_subtitle"
        android:textColor="@color/primary_text_color"
        />

    <Button
        android:id="@+id/create_list_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_create_list"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_menu_question"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/main_menu_button"
        android:padding="5dp"
        />

    <Button
        android:id="@+id/browse_shops_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_browse_shops"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/create_list_button"
        android:layout_margin="6dp"
        android:background="@drawable/main_menu_button"
        />

    <Button
        android:id="@+id/saved_lists"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/saved_lists_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/browse_shops_button"
        android:layout_margin="6dp"
        android:background="@drawable/main_menu_button"
        />

</RelativeLayout>
