<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creator_title"
        android:text="@string/list_creator_header"
        android:textSize="35sp"
        android:textColor="@color/primary_text_color"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/creator_product_name"
        android:text="@string/list_creator_text_input"
        android:textSize="15sp"
        android:textColor="@color/primary_text_color"
        android:layout_below="@+id/creator_title"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_input"
        android:theme="@style/item_input_style"
        android:hint="@string/list_creator_input_default"
        android:textSize="20sp"
        android:textColor="@color/item_input_color"
        android:layout_below="@id/creator_product_name"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input"
        android:layout_above="@id/previewListButton"
        android:id="@+id/list_creator_list"
        android:background="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/preview_button_text"
        android:textColor="@color/preview_button_text_color"
        android:background="@drawable/list_preview_button"
        android:id="@+id/previewListButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/show_route_button"
        android:textColor="@color/white"
        android:background="@drawable/choose_shop_button"
        android:id="@+id/showRouteButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/previewListButton"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp" />

</RelativeLayout>