<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_item_text"
        android:textColor="@color/primary_text_color"
        android:textSize="25sp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/current_item_name"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp"
            android:padding="2dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_items_text"
        android:textColor="@color/primary_text_color"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/other_items"
        android:background="@color/white">
    </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/postpone_item"
            android:text="@string/postpone_item_button"
            android:padding="4dp"
            android:textColor="@color/preview_button_text_color"
            android:background="@drawable/list_preview_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/got_item"
            android:text="@string/got_item_button"
            android:padding="4dp"
            android:textColor="@color/white"
            android:background="@drawable/choose_shop_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="60dp"
            />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>